<resources>
    <string name="app_name">Alimento</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="purchase">Új Vásárlás</string>
    <string name="transactions">Tranzakciók</string>
    <string name="storage">Raktár</string>
    <string name="diagram">Forgalom</string>
    <string name="name">name</string>
    <string name="amount">amount</string>
    <string name="price">price</string>
    <string name="purchase_name">vásárolt_név</string>
    <string name="purchase_price">vásárlás érték</string>
    <string name="purchase_amount">vásárlás tömeg</string>
    <string name="input_purchase_amount">tömeg megadása:</string>
    <string name="v_s_rl_s">Vásárlás</string>
    <string name="cancel">Vissza</string>
    <string name="date">dátum</string>
    <string name="income">bevétel</string>
    <string name="delete_all">Összes törlése</string>
    <string name="yes">Igen</string>
    <string name="no">Mégse</string>
    <string name="input_amount">Adja meg az értéket:</string>
    <string name="remove_grain">-</string>
    <string name="add_grain">+</string>
    <string name="newPriceHint">Új ár: (Kg/Ft)</string>
    <string name="modifyPrice">Módosít</string>
    <string name="CBModifyPrice">Árváltozás</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirm_order">Vásárlás véglegesítése</string>
    <string name="_100">100</string>
    <string name="busket_content">Kosár tartalma:</string>
    <string name="sum">Fizetendő:</string>
    <string name="hint_amount">Adja meg a tömeget: (kg)</string>
</resources>