<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:weightSum="17">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/busket_content"
        android:textSize="36sp"
        android:layout_weight="1"
        android:paddingLeft="8dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvBusket"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:listitem="@layout/item_grain_list"
        android:layout_weight="15"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:weightSum="2"
        android:layout_marginBottom="8dp">

        <Button
            android:layout_marginStart="8dp"
            android:id="@+id/btnConfirmPurchase"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/confirm_order"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tvSum"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="16sp"
            android:text="@string/sum"
            android:padding="8dp"
            android:layout_weight="1"/>

    </LinearLayout>
</LinearLayout>