<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="8dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="8dp"
    android:id="@+id/layout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/ibBusketGrain"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:id="@+id/tvBusketName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/name"
            android:layout_gravity="center_vertical"
            android:paddingStart="30dp"/>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_100"
            android:id="@+id/tvBusketQuantity"
            android:layout_weight="1"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvBusketPrice"
            android:text="@string/price"
            android:layout_weight="1"
            android:layout_gravity="center"/>

        <ImageButton
            android:id="@+id/btnibRemove"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="fitCenter"

            android:src="@drawable/ic_delete_foreground"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>
</LinearLayout>